--- a/EdHouseHW/Properties/launchSettings.json
+++ b/EdHouseHW/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "EdHouseHW": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "input.txt"
     }
   }
 }
