remove starting arg for debugging

--- a/EdHouseHW/Properties/launchSettings.json
+++ b/EdHouseHW/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "EdHouseHW": {
-      "commandName": "Project",
-      "commandLineArgs": "input.txt"
+      "commandName": "Project"
     }
   }
 }
